--- a/урок4/index.html
+++ b/урок4/index.html
@@ -122,7 +122,7 @@
                 <input type="text">
                 <br>
                 <br>
-                <button>Submit</button>
+                <input type="submit"></input>
             </form>
         </section>  
     </main>
