--- a/урок4/index.html
+++ b/урок4/index.html
@@ -122,24 +122,22 @@
                 <input type="text">
                 <br>
                 <br>
-                <input type="submit"></input>
+                <input type="submit" value="connect">
             </form>
         </section>  
     </main>
     <!--FOOTER-->
    <footer>
+        <img src="" alt="logo">
         <ul>
             <li>
-                <img src="" alt="logo">
+                <a href="" target="_blank"><img src="" alt="telegram"><a/>
             </li>
             <li>
-                <img src="" alt="pic">
+                <a href="" target="_blank"><img src="" alt="facebook"></a>
             </li>
             <li>
-                <img src="" alt="pic">
-            </li>
-            <li>
-                <img src="" alt="pic">
+                <a href="" target="_blank"><img src="" alt="twitter"></a>
             </li>
         </ul>
         <ul>
